Task 14: Installed Electron to allow the Angular app to be shown in its own window as well as made into an executable. Added links between homepage and login components.

--- a/roundTableTournamentsFrontEnd/src/app/login/login.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/login/login.component.html
@@ -2,3 +2,5 @@
 
 <!-- TODO: Add text field for username and password -->
 <!-- TODO: Add option to create new account -->
+
+<a routerLink="/" routerLinkActive="active">Back to Home</a>
