--- a/roundTableTournamentsFrontEnd/src/app/homepage/homepage.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/homepage/homepage.component.html
@@ -1,1 +1,3 @@
 <p>This will be the homepage component. General tournament info could go here. </p>
+
+<a routerLink="/login" routerLinkActive="active">Click here to login</a>
