us34-t35: Added basic layout and sample text for homepage

--- a/roundTableTournamentsFrontEnd/src/app/homepage/homepage.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/homepage/homepage.component.html
@@ -1,3 +1,32 @@
 <!-- Temporary page description -->
-<p>This will be the homepage component. General tournament info could go here. </p>
+
+<h1>Tournament Information</h1>
+
+<h4>Important Details</h4>
+<p><b>Dates:</b> Friday November 12th through Sunday November 14th</p>
+<p><b>Location:</b> TBD </p>
+<p><b>Deadline to Register:</b> Friday October 1st</p>
+<br>
+
+
+<h4>Welcome!</h4>
+<p> Generic description of the tournament (in paragraph form) can go here. </p>
+<br>
+
+
+<h4>Who Can Play</h4>
+<p> TODO: Add age ranges</p>
+<br>
+
+
+<h4>How To Register</h4>
+<p> 1. Go to 'Register' in the menu above </p>
+<p> 2. Enter team information </p>
+<p> 3. Submit payment when prompted </p>
+<br>
+
+
+<h4>Tournament Rules</h4>
+<p> TODO: Insert rules</p>
+<br>
 
