--- a/roundTableTournamentsFrontEnd/src/app/app.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/app.component.html
@@ -1,8 +1,7 @@
 <!-- HTML code for the app component (the main component of the application, where all components are displayed) -->
 
 
-<h1>Round Table Tournaments Application</h1> <!-- temporary app title -->
-
+<h1 class="header">Round Table Tournaments Application</h1> <!-- temporary app title -->
 <!-- TODO: insert header component with menu bar here? -->
 
 <router-outlet></router-outlet> <!-- The router outlet is where different components can be displayed, based on the path entered after "localhost:4200/". Default is homepage component -->
