us18-t33: Centered a title tag on Login page to match the other title tag on the page.

--- a/roundTableTournamentsFrontEnd/src/app/login/login.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/login/login.component.html
@@ -15,7 +15,7 @@
 <br><br>
 
 <!-- Input fields for creating a new account -->
-<h3>Or, create a new account</h3>
+<h3 style="text-align: center;">Or, create a new account</h3>
 <br/>
 <label for="newUsername">Username </label> 
 <input id ="newUsername" name="newUsername" type="text"> <br>
