--- a/roundTableTournamentsFrontEnd/src/app/results/results.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/results/results.component.html
@@ -1,1 +1,80 @@
-<p>This will be the results page</p>
+
+    
+         
+        <table class="content-table">
+            <thead>
+              <tr>
+                <th>Team</th>
+                <th>Team Name</th>
+                <th>Points</th>
+                
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td> Colorodo Rapids</td>
+                <td>11</td>
+                 
+              </tr>
+              <tr class="active-row">
+                <td>2</td>
+                <td>Salt Lake</td>
+                <td> 8</td>
+                 
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>FC Dallas</td>
+                <td>9</td>
+                 
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>Chicago Fire</td>
+                <td>5</td>
+                 
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>Columbus Crew</td>
+                <td>12</td>
+                 
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>DC United</td>
+                <td>7</td>
+                 
+              </tr>
+              <tr>
+                <td>7</td>
+                <td>Portland Timbers</td>
+                <td>10</td>
+                 
+              </tr>
+              <tr>
+                <td>8</td>
+                <td>FC Cincinatti</td>
+                <td>7</td>
+                 
+              </tr>
+              <tr>
+                <td>9</td>
+                <td>ASU Warriors</td>
+                <td>13</td>
+                 
+              </tr>
+              <tr>
+                <td>10</td>
+                <td>Nashville SC</td>
+                <td>4</td>
+                 
+              </tr>
+              
+
+            </tbody>
+          </table>
+
+    
+
