--- a/roundTableTournamentsFrontEnd/src/app/navigation/navigation.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/navigation/navigation.component.html
@@ -4,7 +4,7 @@
     <ul>
         <li><a routerLink="/">Home</a></li>
         <li><a routerLink="/results">Results</a></li>
-        <li><a routerLink="/">Placeholder</a></li>
+        <li><a routerLink="/register">Register</a></li>
         <li><a routerLink="/">Placeholder</a></li>
         <li><a routerLink="/">Placeholder</a></li>
         <li><a routerLink="/login">Login</a></li>
