--- a/roundTableTournamentsFrontEnd/src/app/navigation/navigation.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/navigation/navigation.component.html
@@ -5,7 +5,7 @@
         <li><a routerLink="/">Home</a></li>
         <li><a routerLink="/results">Results</a></li>
         <li><a routerLink="/">Placeholder</a></li>
-        <li><a routerLink="/">Placeholder</a></li>
+        <li><a routerLink="/referee-director">Referee Director</a></li>
         <li><a routerLink="/">Placeholder</a></li>
         <li><a routerLink="/login">Login</a></li>
     </ul>
