--- a/roundTableTournamentsFrontEnd/src/app/navigation/navigation.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/navigation/navigation.component.html
@@ -6,7 +6,7 @@
         <li><a routerLink="/results">Results</a></li>
         <li><a routerLink="/">Placeholder</a></li>
         <li><a routerLink="/">Placeholder</a></li>
-        <li><a routerLink="/">Placeholder</a></li>
+        <li><a routerLink="/team-director">TeamDirector</a></li>
         <li><a routerLink="/login">Login</a></li>
     </ul>
 </div>
