us55-t71: Added basic content to Tournament Director page

--- a/roundTableTournamentsFrontEnd/src/app/tournament-director/tournament-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/tournament-director/tournament-director.component.html
@@ -1,1 +1,32 @@
-<p>tournament-director works!</p>
+
+
+
+
+
+<div class="generic-info-wrapper">
+<h4>Welcome!</h4>
+    <p>1.Tournament Director is responsible for what should be implemented 1 or 2, and mark the rest as "To be finished later" </p>
+    <p>2.Tournament Director Features :(anything that doesn't go under other user's jobs): Edit FAQ page, manage hotels, manage sponsors,etc </p>
+     
+    <br>
+</div>
+
+
+
+
+<div class="footer">
+    <a routerLink="field-director/" routerLinkActive="active"> Field Director Admin Page</a>
+    
+    
+</div> 
+
+<div class="footer">
+    <a routerLink="team-director/" routerLinkActive="active">  Team Director Admin Page</a>
+        
+        
+</div>
+
+<div class="footer">
+    <a routerLink="referee-director/" routerLinkActive="active"> Referee Director Admin Page</a>
+    
+</div>
