us55: Added some features to the pages.

--- a/roundTableTournamentsFrontEnd/src/app/field-director/field-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/field-director/field-director.component.html
@@ -1,2 +1,17 @@
-<p>This is field-director page!<p>
- 
+<h3>Field Director!</h3>
+<div class="field-director-Info">
+    <p><b>Upcoming Match Schedule:</b> Friday November 12th through Sunday November 14th</p>
+    <p><b>Location:</b> TBD </p>  
+    <br>
+</div>
+<br><br>
+<div class="Field">
+    <h3 style="text-align: left;">Login for Tournament Director</h3>
+    <br> 
+    <label for="username" style="text-align: center;">Username: </label> 
+    <input id ="username" name="username" type="text"> <br>
+    <label for="password">Password:  </label> 
+    <input id ="password" name="password" type="password"> <br>
+    <button class="btn">Login</button>
+    <br>
+</div>
