--- a/roundTableTournamentsFrontEnd/src/app/referee-director/referee-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/referee-director/referee-director.component.html
@@ -1,2 +1,17 @@
-<p>referee-director works!</p>
- 
+<h3>Referee-director</h3>
+<div class="referee-Info">
+    <p><b>Schedule For Referee:</b> Friday November 12th through Sunday November 14th</p>
+    <p><b>Location:</b> TBD </p>   
+    <br>
+</div>
+<br><br>
+<div class="referee-login">
+<h3 style="text-align: left;">Login for Referee Director</h3>
+<br/>
+<label for="username" style="text-align: center;">Username: </label> 
+<input id ="username" name="username" type="text"> <br>
+<label for="password">Password:  </label> 
+<input id ="password" name="password" type="password"> <br>
+
+<button class="btn">Login</button>
+</div>
