--- a/roundTableTournamentsFrontEnd/src/app/team-director/team-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/team-director/team-director.component.html
@@ -1,1 +1,18 @@
-<p>team-director works!</p>
+<h3>Team Director!</h3>
+<div class="match-Info">
+    <p><b>Upcoming Match Schedule:</b> Friday November 12th through Sunday November 14th</p>
+    <p><b>Location:</b> TBD </p>   
+    <br>
+</div>
+<br><br>
+<div class="Team">
+    <h3 style="text-align: left;">Login for Team Director</h3>
+    <br> 
+    <label for="username" style="text-align: center;">Username: </label> 
+    <input id ="username" name="username" type="text"> <br>
+    <label for="password">Password:  </label> 
+    <input id ="password" name="password" type="password"> <br>
+    <button class="btn">Login</button>
+    <br>
+</div>
+
