--- a/roundTableTournamentsFrontEnd/src/app/tournament-director/tournament-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/tournament-director/tournament-director.component.html
@@ -1,1 +1,20 @@
-<p>tournament-director works!</p>
+<h3>Tournament Director!</h3>
+<div class="tournament-director-Info">
+    <p><b>Upcoming Match Schedule:</b> Friday November 12th through Sunday November 14th</p>
+    <p><b>Location:</b> TBD </p>  
+    <br>
+</div>
+<br><br>
+<div class="Tournament">
+    <h3 style="text-align: left;">Login for Tournament Director</h3>
+    <br> 
+    <label for="username" style="text-align: center;">Username: </label> 
+    <input id ="username" name="username" type="text"> <br>
+    <label for="password">Password:  </label> 
+    <input id ="password" name="password" type="password"> <br>
+    <button class="btn">Login</button>
+    <br>
+</div>
+    
+    
+
