--- a/roundTableTournamentsFrontEnd/src/app/tournament-director/tournament-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/tournament-director/tournament-director.component.html
@@ -15,18 +15,18 @@
 
 
 <div class="footer">
-    <a routerLink="field-director/" routerLinkActive="active"> Field Director Admin Page</a>
+    <a routerLink="/field-director" routerLinkActive="active"> Field Director Admin Page</a>
     
     
 </div> 
 
 <div class="footer">
-    <a routerLink="team-director/" routerLinkActive="active">  Team Director Admin Page</a>
+    <a routerLink="/team-director" routerLinkActive="active">  Team Director Admin Page</a>
         
         
 </div>
 
 <div class="footer">
-    <a routerLink="referee-director/" routerLinkActive="active"> Referee Director Admin Page</a>
+    <a routerLink="/referee-director" routerLinkActive="active"> Referee Director Admin Page</a>
     
 </div>
