--- a/roundTableTournamentsFrontEnd/src/app/team-director/team-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/team-director/team-director.component.html
@@ -1,1 +1,8 @@
-<p>team-director works!</p>
+
+<div class="team-info">
+    <h4>Team Director</h4>
+    <p><b>Upcoming Match:</b> Friday November 12th through Sunday November 14th</p>
+    <p><b>Location:</b> TBD </p>
+    <p><b>Deadline to Register:</b> Friday October 1st</p>
+    
+</div>
