us55-t68: Created Field director page and added content into it.

--- a/roundTableTournamentsFrontEnd/src/app/field-director/field-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/field-director/field-director.component.html
@@ -1,2 +1,8 @@
-<p>This is field-director page!<p>
- 
+
+ <div class="field-info">
+        <h4>Important Details</h4>
+        <p><b>Dates:</b> Friday November 12th through Sunday November 14th</p>
+        <p><b>Location:</b> TBD </p>
+        <p><b>Deadline to Register:</b> Friday October 1st</p>
+        
+</div>
