--- a/roundTableTournamentsFrontEnd/src/app/tournament-director/tournament-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/tournament-director/tournament-director.component.html
@@ -5,8 +5,8 @@
 
 <div class="generic-info-wrapper">
 <h4>Welcome!</h4>
-    <p>1.Tournament Director is responsible for what should be implemented 1 or 2, and mark the rest as "To be finished later" </p>
-    <p>2.Tournament Director Features :(anything that doesn't go under other user's jobs): Edit FAQ page, manage hotels, manage sponsors,etc </p>
+    
+    <p>Tournament Director Features :(anything that doesn't go under other user's jobs): Edit FAQ page, manage hotels, manage sponsors,etc </p>
      
     <br>
 </div>
