--- a/roundTableTournamentsFrontEnd/src/app/field-director/field-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/field-director/field-director.component.html
@@ -7,3 +7,38 @@
         <p><b>Deadline to Register:</b> Friday October 1st</p>
         
 </div>
+<div class="scoresInput">
+        <!-- Input fields for entering scores-->
+        <br/>
+        <h3 style="text-align: left;">Enter Match scores</h3>
+        <br/>
+        <label for="Match_ID" style="text-align: center;">Match_ID: </label> 
+        <input id ="Match_ID" name="Match_ID" type="text"> <br>
+        <label for="home_team">Home Team:  </label> 
+        <select name="home_team" id="home_team">
+                <option></option> 
+                <option value="t1">Team1</option>
+                <option value="t2">Team2</option>
+                <option value="t3">Team3</option>
+                <option value="t4">Team4</option>
+                <option value="t5">Team5</option>
+                <option value="t6">Team6</option>
+        </select> <br>
+        <label for="home_team_scores">Home Team Scores:  </label> 
+        <input id ="home_team_scores" name="home_team_scores" type="text"> <br>
+        <label for="visit_team">Visiting Team:  </label> 
+        <select name="visit_team" id="visit_team">
+                <option></option> 
+                <option value="A">TeamA</option>
+                <option value="B">TeamB</option>
+                <option value="C">TeamC</option>
+                <option value="D">TeamD</option>
+                <option value="E">TeamE</option>
+                <option value="F">TeamF</option>
+        </select> <br>
+        
+        <label for="visit_team_scores">Visiting Team Scores:  </label> 
+        <input id ="visit_team_scores" name="visit_team_scores" type="text"> <br>
+        
+        <button class="btn">Save</button>
+</div>
