us60-t88:made proper results table

--- a/roundTableTournamentsFrontEnd/src/app/results/results.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/results/results.component.html
@@ -1,80 +1,113 @@
 
-    
-         
-        <table class="content-table">
+          <table class="content-table">
             <thead>
               <tr>
-                <th>Team</th>
-                <th>Team Name</th>
-                <th>Points</th>
-                
+                <th>No.</th>
+                <th>Div</th>
+                <th>Time</th>
+                <th>Field</th>
+                <th>Home Team</th>
+                <th>points</th>
+                <th>Visiting Team </th>
+                 
+                <th>points</th>                
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>1</td>
+                <td>A3Blue</td>
+                <td>12:20 PM</td>
+                <td>WSC17</td>
                 <td> Colorodo Rapids</td>
-                <td>11</td>
-                 
+                <td></td>
+                <td>A1-North Elite</td>
+                <td></td>
+
               </tr>
               <tr class="active-row">
                 <td>2</td>
+                <td>A3Blue</td>
+                <td>12:20 PM</td>
+                <td>WSC17</td>
+                
                 <td>Salt Lake</td>
-                <td> 8</td>
+                <td></td>
+                <td>A2-Lexington Boys Red</td>
+                <td></td>
                  
               </tr>
               <tr>
                 <td>3</td>
+                <td>A3Blue</td>
+                <td>5:50 PM</td>
+                <td>WSC17</td>
+                 
+                
                 <td>FC Dallas</td>
-                <td>9</td>
+                <td></td>
+                <td>A3-Tippecannoe Lightening</td>
+
+                <td></td>
                  
               </tr>
               <tr>
                 <td>4</td>
+                <td>A3Blue</td>
+                <td>5:50 PM</td>
+                <td>WSC17</td>
+                 
                 <td>Chicago Fire</td>
-                <td>5</td>
+                <td></td>
+                <td>A1-CU North 11B Elite</td>
+                <td></td>
                  
               </tr>
               <tr>
                 <td>5</td>
+                <td>A3Blue</td>
+                <td>9:05 AM</td>
+                <td>WSC17</td>
+                 
                 <td>Columbus Crew</td>
-                <td>12</td>
+                <td></td>
+                <td>A4- 2011 AMU Ridder</td>
+                <td></td>
                  
               </tr>
               <tr>
                 <td>6</td>
+                <td>A3Blue</td>
+                <td>10:10 AM</td>
+                <td>WSC17</td>
+                 
                 <td>DC United</td>
-                <td>7</td>
+                <td></td>
+                <td>A2-Lexington FC U11 Boys Red</td>
+                <td></td>
                  
               </tr>
               <tr>
                 <td>7</td>
+                <td>A3Blue</td>
+                <td>2:35 PM</td>
+                <td>WSC17</td>
+                 
                 <td>Portland Timbers</td>
-                <td>10</td>
+                <td></td>
+                <td>A3-FC Tippacanoe Lightening</td>
+                <td></td>
                  
               </tr>
-              <tr>
-                <td>8</td>
-                <td>FC Cincinatti</td>
-                <td>7</td>
-                 
-              </tr>
-              <tr>
-                <td>9</td>
-                <td>ASU Warriors</td>
-                <td>13</td>
-                 
-              </tr>
-              <tr>
-                <td>10</td>
-                <td>Nashville SC</td>
-                <td>4</td>
-                 
-              </tr>
+               
+               
+               
               
 
             </tbody>
           </table>
 
     
+
+
 
