--- a/roundTableTournamentsFrontEnd/src/app/results/results.component.css
+++ b/roundTableTournamentsFrontEnd/src/app/results/results.component.css
@@ -10,11 +10,14 @@
     border-radius: 5px 5px 0 0;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+     
     
   }
   
   .content-table thead tr {
-    background-color: #009879;
+    background-color: #983000cc;
+     
+    
     color: #ffffff;
     text-align: left;
     font-weight: bold;
@@ -22,6 +25,7 @@
   
   .content-table th,
   .content-table td {
+    border: 1px solid #222;
     padding: 12px 15px;
   }
   
@@ -34,7 +38,7 @@
   }
   
   .content-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
+    border-bottom: 2px solid #982b00f3;
   }
   
    
