--- a/roundTableTournamentsFrontEnd/src/app/app.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/app.component.html
@@ -4,7 +4,9 @@
 <h1 class="header">Round Table Tournaments Application</h1> <!-- temporary app title -->
 
 <app-navigation></app-navigation> <!-- Navigation Component -->
-<br> <br>
+<br> <br> <br>
+
+<div class="spacer"></div>
 
 <router-outlet></router-outlet> <!-- The router outlet is where different components can be displayed, based on the path entered after "localhost:4200/". Default is homepage component -->
 
