us61-t108: Edited Admin pages to be more representative of each user. Made other minor layout/text changes.

--- a/roundTableTournamentsFrontEnd/src/app/app.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- HTML code for the app component (the main component of the application, where all components are displayed) -->
 
 
-<h1 class="header">Round Table Tournaments Application</h1> <!-- temporary app title -->
+<h1 class="header">Round Table Tournaments</h1> <!-- temporary app title -->
 
 <app-navigation></app-navigation> <!-- Navigation Component -->
 <br> <br> <br>
