--- a/roundTableTournamentsFrontEnd/src/app/field-director/field-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/field-director/field-director.component.html
@@ -1,18 +1,15 @@
 
 
  <div class="field-info">
-        <h4>Important Details</h4>
-        <p><b>Dates:</b> Friday November 12th through Sunday November 14th</p>
-        <p><b>Location:</b> TBD </p>
-        <p><b>Deadline to Register:</b> Friday October 1st</p>
+        <h4>Field Director</h4>
         
 </div>
 <div class="scoresInput">
         <!-- Input fields for entering scores-->
         <br/>
-        <h3 style="text-align: left;">Enter Match scores</h3>
+        <h3 style="text-align: left;">Enter Match Scores</h3>
         <br/>
-        <label for="Match_ID" style="text-align: center;">Match_ID: </label> 
+        <label for="Match_ID" style="text-align: center;">Match ID: </label> 
         <input id ="Match_ID" name="Match_ID" type="text"> <br>
         <label for="home_team">Home Team:  </label> 
         <select name="home_team" id="home_team">
