--- a/roundTableTournamentsFrontEnd/src/app/referee-director/referee-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/referee-director/referee-director.component.html
@@ -1,8 +1,6 @@
 
  
 <div class="referee-info">
-    <p><b>Schedule:</b> Friday November 12th through Sunday November 14th</p>
-    <p><b>Location:</b> TBD </p>
-    <p><b>Deadline to Register:</b> Friday October 1st</p>
+    <h4>Referee Director</h4>
     
 </div>
