--- a/roundTableTournamentsFrontEnd/src/app/tournament-director/tournament-director.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/tournament-director/tournament-director.component.html
@@ -5,18 +5,12 @@
 
 
 <div class="generic-info-wrapper">
-<h4>Welcome!</h4>
-
+<h4>Tournament Director</h4>
     
-
-       
-
-    <p>Tournament Director Features :(anything that doesn't go under other user's jobs): Edit FAQ page, manage hotels, manage sponsors,etc </p>
-     
-    <br>
 </div>
 
-
+<br>
+<h4 class="footer"> Other Admin Pages: </h4>
 
 
 <div class="footer">
