--- a/roundTableTournamentsFrontEnd/src/app/login/login.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/login/login.component.html
@@ -1,37 +1,25 @@
-<!-- Temporary page description -->
-
-<p class="paragraph">This will be the login component. Users will be able to log in to an existing account or sign up for a new one.</p>
-
+<html>
+<head>
+<title>Login Form</title>
+<!-- Include CSS File Here -->
+<link rel="stylesheet" href="login.component.css"/>
+<!-- Include JS File Here -->
+<script src="login.component.js"></script>
+</head>
+<body>
 <div class="container">
-<!-- Input fields for existing account -->
-<h3 style="text-align: center;">Log into an existing account</h3>
-<br/>
-<label for="username" style="text-align: center;">Username: </label> 
-<input id ="username" name="username" type="text"> <br>
-<label for="password">Password </label> 
-<input id ="password" name="password" type="password"> <br>
-
-<button class="btn">Login</button>
-<br><br>
-
-<!-- Input fields for creating a new account -->
-<h3 style="text-align: center;">Or, create a new account</h3>
-<br/>
-<label for="newUsername">Username </label> 
-<input id ="newUsername" name="newUsername" type="text"> <br>
-<label for="email">Email </label> 
-<input id ="email" name="email" type="text"> <br>
-<label for="newPassword">Password </label> 
-<input id ="newPassword" name="newPassword" type="password"> <br>
-
-<button class="btn">Create account</button>
-<br><br>
+<div class="main">
+<h2>Login Form</h2>
+<form id="form_id" method="post" name="myform">
+<label>User Name :</label>
+<input type="text" name="username" id="username"/>
+<label>Password :</label>
+<input type="password" name="password" id="password"/>
+<input type="button" value="Login" id="submit" onclick="validate()"/>
+</form>
+<span><b class="note">Note : </b>Use the following format for username and password. <br/><b class="valid">User Name : ABC<br/>Password : ABC@#123</b></span>
 </div>
-
-<!-- This clickable text will link to the homepage component -->
-<div class="footer">
-<a routerLink="/" routerLinkActive="active">Back to Home</a>
-
-
 </div>
+</body>
+</html>
 
