--- a/roundTableTournamentsFrontEnd/src/app/login/login.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Login Form</title>
+<title>Javascript Login Form Validation</title>
 <!-- Include CSS File Here -->
 <link rel="stylesheet" href="login.component.css"/>
 <!-- Include JS File Here -->
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
 <div class="main">
-<h2>Login Form</h2>
+<h2>Login Form </h2>
 <form id="form_id" method="post" name="myform">
 <label>User Name :</label>
 <input type="text" name="username" id="username"/>
