--- a/roundTableTournamentsFrontEnd/src/app/login/login.component.css
+++ b/roundTableTournamentsFrontEnd/src/app/login/login.component.css
@@ -14,7 +14,8 @@ margin-bottom: 40px;
 }
 div.container{
 width: 900px;
-background-color:white;
+background-color:rgb(255, 255, 255);
+border:white;
 height: 500px;
 margin:35px 35px;
 font-family: 'Raleway', sans-serif;
@@ -58,7 +59,7 @@ color:green;
 }
 .back{
 text-decoration: none;
-border: 1px solid rgb(0, 143, 255);
+border: 1px solid rgb(250, 252, 253);
 background-color: rgb(0, 214, 255);
 padding: 3px 20px;
 border-radius: 2px;
