--- a/roundTableTournamentsFrontEnd/src/app/homepage/homepage.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/homepage/homepage.component.html
@@ -36,7 +36,7 @@
 
 
     <h4>Tournament Rules</h4>
-    <p> TODO: Insert rules (after talking to customer)</p>
+    <a href="https://www.usyouthsoccer.org/">See Rules Here</a>
     <br>
 
 </div>
