us100: Fixed table in results component to have points for visiting team.

--- a/roundTableTournamentsFrontEnd/src/app/results/results.component.html
+++ b/roundTableTournamentsFrontEnd/src/app/results/results.component.html
@@ -7,8 +7,9 @@
                 <th>Time</th>
                 <th>Field</th>
                 <th>Home Team</th>
-                <th>points</th>
+                <th>Points</th>
                 <th>Visiting Team </th>
+                <th>Points</th>
                  
               </tr>
             </thead>
@@ -21,6 +22,7 @@
                 <td> Colorodo Rapids</td>
                 <td>9</td>
                 <td>A1-North Elite</td>
+                <td>4</td>
 
               </tr>
               <tr class="active-row">
@@ -31,6 +33,7 @@
                 <td>Salt Lake</td>
                 <td>6</td>
                 <td>A2-Lexington Boys Red</td>
+                <td>1</td>
               </tr>
               <tr>
                 <td>3</td>
@@ -40,6 +43,7 @@
                 <td>FC Dallas</td>
                 <td>7</td>
                 <td>A3-Tippecannoe Lightening</td>
+                <td>4</td>
               </tr>
               <tr>
                 <td>4</td>
@@ -49,6 +53,7 @@
                 <td>Chicago Fire</td>
                 <td>3</td>
                 <td>A1-CU North 11B Elite</td>
+                <td>5</td>
               </tr>
               <tr>
                 <td>5</td>
@@ -58,6 +63,7 @@
                 <td>Columbus Crew</td>
                 <td>5</td>
                 <td>A4- 2011 AMU Ridder</td>
+                <td>2</td>
               </tr>
               <tr>
                 <td>6</td>
@@ -67,6 +73,7 @@
                 <td>DC United</td>
                 <td>2</td>
                 <td>A2-Lexington FC U11 Boys Red</td>
+                <td>3</td>
               </tr>
               <tr>
                 <td>7</td>
@@ -76,6 +83,7 @@
                 <td>Portland Timbers</td>
                 <td>3</td>
                 <td>A3-FC Tippacanoe Lightening</td>
+                <td>7</td>
               </tr>
                
                
